Fix issue of constantly writing to the magnets file.

Basically MagnetManager was constantly emitting `update`, even if it
hadn't updated. I've removed the bad emit and added a test to ensure the
signal is only emitted when needed.

BUG: 490894